# mcsvulkan

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md
assets/charset/: arabic_charset.txt  small_chinese_common.txt  small_emoji.txt
cmake/: vulkan.cmake
include/: mcsvulkan.hpp
include/detail/: CommandBuffer.hpp  CommandBufferView.hpp  CommandBuffers.hpp  CommandPool.hpp  Debuger.hpp  Debugger.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  DescriptorSetView.hpp  DescriptorSets.hpp  Fence.hpp  ImageView.hpp  Instance.hpp  LogicalDevice.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineLayout.hpp  Queue.hpp  Sampler.hpp  ShaderModule.hpp  Swapchain.hpp  __camera.hpp  __conn.hpp  __ecs.hpp  __font.hpp  __glm_import.hpp  __input.hpp  __load.hpp  __memory.hpp  __meta.hpp  __task.hpp  __to_string.hpp  __tool.hpp  __utils.hpp  __vma.hpp  __vma_import.hpp  __volk_import.hpp  __vulkan.hpp  __wsi.hpp  (+8 more)
test/: agg.cmake  all_test.cmake  base.cmake  env.cmake  font.cmake  manifold.cmake  mcsvulkan.cmake  no_test.cmake  tool.cmake  yoga.cmake
test/agg/: arrow_demo.cpp  arrow_demo1.cpp  arrow_demo2.cpp  arrow_demo3.cpp  arrow_demo4.cpp  arrow_demo5.cpp  arrow_demo6.cpp  color.cpp  freeType.cpp  gen_emoji_atlas.cpp  gen_emoji_atlas2.cpp  gen_emoji_atlas3.cpp  gen_emoji_atlas4.cpp  harfbuzz.cpp  harfbuzz2.cpp  harfbuzz3.cpp  lion.cpp  msdf_atlas_gen.cpp  msdfgen.cpp  raqm.cpp  t01_rendering_buffer.cpp  t02_pixel_formats.cpp  t03visualize.cpp  test_clip.cpp  unibreak.cpp  unibreak2.cpp  unibreak3.cpp  unibreak4.cpp
test/base/: test_Profiles.cpp  test_instanceExtension.cpp  test_layer.cpp
test/env/: test_freetype_harfbuzz.cpp  test_glfw.cpp  test_glfw2.cpp  test_msdfgen.cpp  test_msdfgen2.cpp  test_msdfgen3.cpp  test_msdfgen4.cpp  test_msdfgen5.cpp  test_nlohmann_json.cpp  test_vma.cpp  test_volk.cpp  test_volk2.cpp  test_volk_device_table.cpp  test_volk_with_validation.cpp  test_vulkan.cpp  test_vulkan_hpp.cpp  test_vulkan_minimal.cpp
test/font/: ScriptLocatorTests.cpp  bidi.cpp  bidi2.cpp  bidi3.cpp  bidi4.cpp  bidi5.cpp  canvas.cpp  font_info.cpp  freetype_face.hpp  freetype_load.cpp  freetype_part1.cpp  freetype_part2.cpp  freetype_part3.cpp  freetype_part4.cpp  freetype_part5.cpp  fribidi.cpp  harfbuzz.cpp  harfbuzz2.cpp  harfbuzz3.cpp  icu.cpp  icu2.cpp  icu3.cpp  icu_line_breaks.cpp  language.cpp  layout.cpp  layout2.cpp  line_breaks.cpp  line_breaks2.cpp  select_font.cpp  select_font2.cpp  select_font3.cpp  select_font4.cpp  unibreak.cpp  unibreak2.cpp  unibreak3.cpp  wordbreaks.cpp
test/manifold/: 2d_bool.cpp  2d_hull.cpp  2d_sample.cpp  2d_simplify.cpp  2d_square.cpp  2d_topology.cpp  2d_transform.cpp  base_triangulation.cpp  test_manifold.cpp  test_triangle.cpp
test/mcsvulkan/: conn.cmake  ecs.cmake  glm.cmake  head.hpp  integration.cmake  macro.cmake  meta.cmake  task.cmake  tool.cmake  type_traits.cmake  vma.cmake  wsi.cmake  yoga.cmake
test/no_test/: base_ptr.cpp  bit_cast.cpp  bit_cast2.cpp  default.cpp  ecs.cpp  ecs2.cpp  ecs3.cpp  forward_as_tuple.cpp  fun.cpp  function_ref.cpp  function_ref2.cpp  initializer_list.cpp  macro.cpp  (+21 more)
test/tool/: CMakeLists.txt  gen_emoji_atlas.cpp  hb_subset_tool.cpp
(+554 files in other folders)
